# objc2

./: Cargo.toml  my_script.sh
.github/workflows/: apple.yml  gnustep.yml
objc2/: Cargo.toml  README.md
objc2-encode/: Cargo.toml
objc2-encode/src/: lib.rs  static_encoding_str.rs  static_int_str.rs
objc2-foundation/: Cargo.toml
objc2-foundation-sys/: Cargo.toml
objc2-foundation-sys/src/: generated.rs  generated_nsstring.rs  generated_others_shim.rs
objc2-foundation/examples/: basic_usage.rs  custom_class.rs
objc2-foundation/src/: array.rs  comparison_result.rs  data.rs  enumerator.rs  lib.rs  macros.rs  object.rs  string.rs  value.rs
objc2-foundation/tests/: objc_id_retain_autoreleased.rs
objc2/examples/: introspection.rs
objc2/src/: declare.rs  exception.rs  lib.rs  runtime.rs  test_utils.rs
objc2/src/message/: mod.rs
objc2/src/rc/: autorelease.rs  id.rs  mod.rs  ownership.rs
objc2/tests/ui/: msg_send_no_return_type.stderr
